--- a/app/app/src/main/res/values-en/strings.xml
+++ b/app/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,8 @@
 
     <!-- LOGIN -->
     <string name="contraseña_error">Contraseña incorrecta</string>
+    <string name="usuario">User</string>
+    <string name="grupo">Group</string>
+
+    <string name="generar_contraseña">Generate password</string>
 </resources>
