--- a/app/app/src/main/res/values-gl/strings.xml
+++ b/app/app/src/main/res/values-gl/strings.xml
@@ -6,4 +6,8 @@
 
     <!-- LOGIN -->
     <string name="contraseña_error">Contrasinal incorrecta</string>
+    <string name="usuario">Usuario</string>
+    <string name="grupo">Grupo</string>
+
+    <string name="generar_contraseña">Xerar contrasinal</string>
 </resources>
