--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
 
     <!-- LOGIN -->
     <string name="contraseña_error">Contraseña incorrecta</string>
+    <string name="usuario">Usuario</string>
+    <string name="grupo">Grupo</string>
+
+    <string name="generar_contraseña">Generar contraseña</string>
 </resources>
