Crear Grupo funcional

--- a/app/app/src/main/res/values-en/strings.xml
+++ b/app/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,7 @@
 
     <!-- LOGIN -->
     <string name="contraseña_error">Contraseña incorrecta</string>
+    <string name="nombre">Name</string>
+
+    <string name="campo_obligatorio">Required field</string>
 </resources>
