--- a/app/app/src/main/res/values-gl/strings.xml
+++ b/app/app/src/main/res/values-gl/strings.xml
@@ -6,4 +6,7 @@
 
     <!-- LOGIN -->
     <string name="contraseña_error">Contrasinal incorrecta</string>
+    <string name="nombre">Nome</string>
+
+    <string name="campo_obligatorio">Campo obligatorio</string>
 </resources>
