--- a/app/app/src/main/res/values-gl/strings.xml
+++ b/app/app/src/main/res/values-gl/strings.xml
@@ -6,4 +6,12 @@
 
     <!-- LOGIN -->
     <string name="contraseña_error">Contrasinal incorrecta</string>
+
+    <!-- DRAWER -->
+    <string name="inicio">Inicio</string>
+    <string name="ajustes">Axustes</string>
+    <string name="navigation_drawer_open">Drawer aberto</string>
+    <string name="navigation_drawer_close">Drawer pechado</string>
+
+    <string name="no_tienes_grupos">Non tes ningún grupo...</string>
 </resources>
