Lista de contraseñas por grupo funcional

--- a/app/app/src/main/res/values-gl/strings.xml
+++ b/app/app/src/main/res/values-gl/strings.xml
@@ -17,4 +17,6 @@
     <string name="navigation_drawer_close">Drawer pechado</string>
 
     <string name="no_tienes_grupos">Non tes ningún grupo...</string>
+    <string name="no_tienes_contraseñas">Non tes ningún contrasinal...</string>
+
 </resources>
