--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="navigation_drawer_close">Drawer cerrado</string>
 
     <string name="no_tienes_grupos">No tienes ningún grupo...</string>
+    <string name="no_tienes_contraseñas">No tienes ninguna contraseña...</string>
 </resources>
