--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -12,9 +12,14 @@
 
     <string name="generar_contraseña">Generar contraseña</string>
     <string name="nombre">Nombre</string>
-
+    <string name="apellido1">Primer apellido</string>
+    <string name="apellido2">Segundo apellido</string>
+    <string name="repetir_contraseña">Repetir contraseña</string>
     <string name="campo_obligatorio">Campo obligatorio</string>
-
+    <string name="email_no_valido">Email no válido</string>
+    <string name="email_uso">Email ya en uso</string>
+    <string name="contraseñas_no_coinciden">Las contraseñas no coinciden</string>
+    <string name="registrarme">Registrarme</string>
     <!-- DRAWER -->
     <string name="inicio">Inicio</string>
     <string name="ajustes">Ajustes</string>
