--- a/app/app/src/main/res/values-en/strings.xml
+++ b/app/app/src/main/res/values-en/strings.xml
@@ -19,6 +19,8 @@
     <string name="email_uso">Email already in use</string>
     <string name="contraseñas_no_coinciden">Passwords don\'t match</string>
     <string name="registrarme">Register</string>
+    <string name="iniciar_sesion">Login</string>
+    <string name="no_registrado">User not registered</string>
     <!-- DRAWER -->
     <string name="inicio">Home</string>
     <string name="ajustes">Settings</string>
