Añadido campo plataforma a contraseña y traducida pantalla CrearContraseña

--- a/app/app/src/main/res/values-en/strings.xml
+++ b/app/app/src/main/res/values-en/strings.xml
@@ -21,6 +21,8 @@
     <string name="registrarme">Register</string>
     <string name="iniciar_sesion">Login</string>
     <string name="no_registrado">User not registered</string>
+    <string name="plataforma">Platform</string>
+    <string name="contraseña_creada">Password created</string>
     <!-- DRAWER -->
     <string name="inicio">Home</string>
     <string name="ajustes">Settings</string>
